Added : Required Functions
