# app/Models/Address.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Address extends Model
+{
+    use HasFactory;
+    protected $table="addresses";
+    protected $fillable = [
+        'user_id',
+        'address',
+        'city',
+        'state',
+        'landmark',
+        'pincode',
+        'addresstype'
+        
+    ];
+    public function user() {
+        return $this->belongsTo(User::class);
+    }
+
+}
